Move parameter processing earlier in kalendar startup

This makes kalendar not initialize akonadi when showing about or version
information and fix kalendar --version when a kalendar instance is
already started.

BUG: 453807

Signed-off-by: Carl Schwan <carl@carlschwan.eu>